--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
+picamera~=1.13
 requests~=2.28.1
 serial~=0.0.97
 pyserial~=3.5
+numpy~=1.21.6
+tensorflow~=2.4.0rc2
+Keras~=2.1.6
 pyttsx3~=2.90
 PyAudio~=0.2.12
-tweepy~=4.10.1
-numpy~=1.21.6
-picamera~=1.13
-wikipedia~=1.4.0
